--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -183,7 +183,7 @@
                                 <li class="menu-item">
                                     <a href="~/QLBills/ShowBill" class="menu-link">
                                         <span class="mdi mdi-receipt-text-clock"></span>
-                                        <div data-i18n="Layouts">Invoice pending</div>
+                                        <div data-i18n="Layouts">Đơn Chờ Xác Nhận </div>
                                     </a>
                                 </li>
                                 <li class="menu-item">
@@ -192,12 +192,12 @@
                                         <span class="mdi mdi-receipt-text-check"></span>
 
 
-                                        <div data-i18n="Without menu">Hóa Đơn Đã Xác Nhận</div>
+                                        <div data-i18n="Without menu"> Đơn Đã Xác Nhận</div>
                                     </a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="~/QLBills/DonHuy" class="menu-link">
-                                        <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận Hủy</div>
+                                        <div data-i18n="Without menu"> Đơn Chờ Hủy</div>
                                     </a>
                                 </li>
                                 <li class="menu-item">
@@ -309,7 +309,7 @@
                                     <li class="menu-item">
                                         <a href="~/QLBills/ShowBill" class="menu-link">
                                             <span class="mdi mdi-receipt-text-clock"></span>
-                                            <div data-i18n="Layouts">Invoice pending</div>
+                                            <div data-i18n="Layouts">Đơn chờ xác nhận</div>
                                         </a>
                                     </li>
                                     <li class="menu-item">
@@ -318,12 +318,12 @@
                                             <span class="mdi mdi-receipt-text-check"></span>
 
 
-                                            <div data-i18n="Without menu">Hóa Đơn Đã Xác Nhận</div>
+                                            <div data-i18n="Without menu">Đơn Đã Xác Nhận</div>
                                         </a>
                                     </li>
                                     <li class="menu-item">
                                         <a href="~/QLBills/DonHuy" class="menu-link">
-                                            <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận Hủy</div>
+                                            <div data-i18n="Without menu">Đơn Chờ Hủy</div>
                                         </a>
                                     </li>
                                     <li class="menu-item">
