--- a/APPVIEW/Views/QLBills/DonHuy.cshtml
+++ b/APPVIEW/Views/QLBills/DonHuy.cshtml
@@ -19,9 +19,14 @@
     <a asp-action="Create">Create New</a>
 </p>
 <form asp-controller="QLBills" asp-action="ShowBill" class="row contact_form" method="post">
-    <div class="col-md-5 form-group">
-        <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
-        <button type="submit" class="btn btn-info waves-effect waves-light">Search</button>
+    <div class="row">
+        <div class="col-md-3 form-group">
+            <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
+
+        </div>    <div class="col-md-2 form-group">
+            <button type="submit" class="btn btn-success">Shearch</button>
+
+        </div>
     </div>
 </form>
 <table class="table">
@@ -145,7 +150,7 @@
                 </td>
 
                 <td>
-                    <button class="btn btn-info waves-effect waves-light"> @Html.ActionLink("Xác nhận hủy đơn hàng ", "HuyDon", new { id = itembill.id }, new { style = "color:black;" }) </button>
+                    <button class="btn btn-danger"> @Html.ActionLink("Xác nhận hủy đơn hàng ", "HuyDon", new { id = itembill.id }, new { style = "color:white;" }) </button>
 
                 </td>
             </tr>
