--- a/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
+++ b/APPVIEW/Views/QLBills/ShowBillXacNhan.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model IEnumerable<APPDATA.Models.Bill>
+﻿@model IEnumerable<APPDATA.Models.Bill>
 
 @{
     ViewData["Title"] = "ShowBillXacNhan";
@@ -22,10 +20,16 @@
     <a asp-action="Create">Create New</a>
 </p>
 <form asp-controller="QLBills" asp-action="ShowBillXacNhan" class="row contact_form" method="post">
-<div class="col-md-5 form-group">
-    <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
-        <button type="submit" class="btn btn-info waves-effect waves-light">Search</button>
-</div>
+
+    <div class="row">
+        <div class="col-md-3 form-group">
+            <input type="text" class="form-control" name="search" placeholder="Nhập mã hóa đơn để tìm kiếm">
+    
+        </div>    <div class="col-md-2 form-group">
+            <button type="submit" class="btn btn-success">Shearch</button>
+
+        </div>
+    </div>
 </form>
 <table class="table">
     <thead>
@@ -144,7 +148,7 @@
                 </td>
 
                 <td>
-                    <button class ="btn btn-info waves-effect waves-light"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:black;" }) </button>
+                    <button class="btn btn-danger"> @Html.ActionLink("Giao hàng ", "GiaoHang", new { id = itembill.id }, new { style = "color:white;" }) </button>
 
                 </td>
             </tr>
