--- a/APPVIEW/Views/Home/Checkout.cshtml
+++ b/APPVIEW/Views/Home/Checkout.cshtml
@@ -65,7 +65,7 @@
                             <div class="row">
 
                                 <div class="col-lg-4">
-                                    <select class="country_select" id="countrySelect" asp-for="@Model.Province">
+                                    <select class="country_select" id="countrySelect" asp-for="@Model.Province" size="5">
                                         @foreach (var item in ViewBag.province)
                                         {
                                             if (Model != null)
