--- a/APPVIEW/Views/Account/GetList.cshtml
+++ b/APPVIEW/Views/Account/GetList.cshtml
@@ -28,31 +28,39 @@
     <div class="card-header">
         <h5 class="card-title">Account</h5>
     </div>
-    <div class="card-header row">
-        <div class="col-md-3">
-            <select id="FilterTransaction" class="form-select text-capitalize">
-                <option value=""> Select Status </option>
-                <option value="Blocked" class="text-capitalize">Blocked</option>
-                <option value="Active" class="text-capitalize">Active</option>
-                <option value="Inactive" class="text-capitalize">Inactive</option>
-            </select>
-        </div>
-        <div class="col-md-3">
-            <select id="UserRole" class="form-select text-capitalize">
-                <option value=""> Select Role </option>
-                <option value="Admin">Admin</option>
-                <option value="Author">Author</option>
-                <option value="Editor">Editor</option>
-                <option value="Maintainer">Maintainer</option>
-                <option value="Subscriber">Subscriber</option>
-            </select>
-        </div>
-        <div class="col-md-3">
-            <div id="DataTables_Table_0_filter" class="dataTables_filter">
-                <label><input type="search" class="form-control" placeholder="Search.." aria-controls="DataTables_Table_0"></label>
+    <form asp-action="getlist">
+        <div class="card-header row">
+            <div class="col-md-3">
+                <select id="FilterTransaction" class="form-select text-capitalize" name="status">
+                    <option value=""> Select Status </option>
+                    <option value="2" class="text-capitalize">Blocked</option>
+                    <option value="1" class="text-capitalize">Active</option>
+                    <option value="0" class="text-capitalize">Inactive</option>
+                </select>
+            </div>
+            <div class="col-md-3">
+                <select id="UserRole" class="form-select text-capitalize" name="role">
+                    <option value=""> Select Role </option>
+                    @foreach (var item in ViewBag.Roles)
+                    {
+                        <option value="@item.id">@item.name</option>
+                    }
+                   
+                </select>
+            </div>
+            <div class="col-md-3">
+                <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                    <label><input type="search" class="form-control" placeholder="Search.." aria-controls="DataTables_Table_0" name="tk" /></label>
+                </div>
+            </div> 
+            <div class="col-md-3">
+                <div id="DataTables_Table_0_filter" class="dataTables_filter">
+                    <label><button class="btn btn-success mb-3" type="submit">Tìm kiếm</button></label>
+                </div>
             </div>
         </div>
-    </div>
+    </form>
+  
     <div class="card-body">
         <a class="btn btn-success mb-3" asp-controller="Account" asp-action="Create">Create New</a>
         @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"] as string))
@@ -203,4 +211,3 @@
     DisplayLinkToNextPage = PagedListDisplayMode.Always
     })
 </div>
-
