--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -14,146 +14,7 @@
 
 <h4>ProductDetail</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-         
-            <div class="form-group">
-                <label asp-for="Id_Category" class="control-label"></label>               
-                <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-                    @{
-                        if (ViewBag.Category != null)
-                        {
-                            foreach (var item in ViewBag.Category)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-             
-                <span asp-validation-for="Id_Category" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_Size" class="control-label"></label>
-                <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-                    @{
-                        if (ViewBag.Size != null)
-                        {
-                            foreach (var item in ViewBag.Size)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Size" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_Product" class="control-label"></label>
-                <select asp-for="Id_Product" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
 
-                    @{
-                        if (ViewBag.Product != null)
-                        {
-                            foreach (var item in ViewBag.Product)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Product" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_Material" class="control-label"></label>
-                <select asp-for="Id_Material" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-
-                    @{
-                        if (ViewBag.Material != null)
-                        {
-                            foreach (var item in ViewBag.Material)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Material" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id_Color" class="control-label"></label>
-                <select asp-for="Id_Color" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
-                    
-                    @{
-                        if (ViewBag.Color != null)
-                        {
-                            foreach (var item in ViewBag.Color)
-                            {
-                            <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_Color" class="text-danger"></span>
-                <a class="btn btn-outline-primary"href="~/Color/create">Thêm màu</a>
-              
-            </div>                      
-            <input type="hidden"  name="myList" id="myList">
-            <div class="form-group">
-                <label asp-for="Id_supplier" class="control-label"></label>
-                <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-
-                    @{
-                        if (ViewBag.Supplier != null)
-                        {
-                            foreach (var item in ViewBag.Supplier)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
-                            }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="Id_supplier" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Quantity" class="control-label"></label>
-                <input asp-for="Quantity" type="number" min="0" class="form-control" />
-                <span asp-validation-for="Quantity" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Desciption" class="control-label"></label>
-                <input asp-for="Desciption" class="form-control" />
-                <span asp-validation-for="Desciption" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" type="number" min="0" class="form-control" />
-                <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Status"  class="control-label"></label>
-                <input asp-for="Status" type="number" min="0" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-                                            
-            <div class="form-group">
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
-                    <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
-                </div>               
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" onclick="passdata()" />
-            </div>
-        </form>
-    </div>
-</div>
-
-<div>
-    <a asp-action="getlist">Back to List</a>
-</div>
 <@*select asp-for="Id_supplier" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
 
     @{
@@ -170,6 +31,186 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js" integrity="sha512-FHZVRMUW9FsXobt+ONiix6Z0tIkxvQfxtCSirkKc5Sb4TKHmqq1dZa8DphF0XqKb3ldLu/wgMa8mT6uXiLlRlw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 *@
+<div class="row">
+    <div class="col-xxl">
+        <div class="card mb-4">
+            <div class="card-header d-flex align-items-center justify-content-between">
+                <h5 class="mb-0">Create a Product</h5>
+
+            </div>
+            <div class="card-body">
+                <form asp-action="Create" method="post" enctype="multipart/form-data">
+                  
+                    <div class="row mb-3">
+                        <label asp-for="Id_Category" class="col-sm-2 col-form-label">Category</label>
+                        <div class="col-sm-10">
+                           <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                                @{
+                                    if (ViewBag.Category != null)
+                                    {
+                                        foreach (var item in ViewBag.Category)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                            </select>
+                            <span asp-validation-for="Id_Category" class="text-danger"></span>
+                        </div>
+                    </div>   
+                    <div class="row mb-3">
+                        <label asp-for="Id_Size" class="col-sm-2 col-form-label">Size</label>
+                        <div class="col-sm-10">
+                        <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                                @{
+                                    if (ViewBag.Size != null)
+                                    {
+                                        foreach (var item in ViewBag.Size)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                       </select>
+                         <span asp-validation-for="Id_Size" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Id_Product" class="col-sm-2 col-form-label">Product</label>
+                        <div class="col-sm-10">
+                       <select asp-for="Id_Product" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
+
+                                @{
+                                    if (ViewBag.Product != null)
+                                    {
+                                        foreach (var item in ViewBag.Product)
+                                        {
+                                            <option value="@item.Id.ToString()"> @item.Name</option>
+                                        }
+                                    }
+                                }
+                </select>
+                <span asp-validation-for="Id_Product" class="text-danger"></span>
+                        </div>
+                    </div>  
+                    <div class="row mb-3">
+                        <label asp-for="Id_Material" class="col-sm-2 col-form-label">Material</label>
+                        <div class="col-sm-10">
+                       <select asp-for="Id_Material" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+
+                    @{
+                        if (ViewBag.Material != null)
+                        {
+                            foreach (var item in ViewBag.Material)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
+                <span asp-validation-for="Id_Material" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Id_Color" class="col-sm-2 col-form-label">Color</label>
+                        <div class="col-sm-10">
+                         <select asp-for="Id_Color" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
+                    
+                    @{
+                        if (ViewBag.Color != null)
+                        {
+                            foreach (var item in ViewBag.Color)
+                            {
+                            <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
+                <span asp-validation-for="Id_Color" class="text-danger"></span>
+                        </div>
+                    </div> 
+                    <div class="row mb-3">
+                        <label asp-for="Id_supplier" class="col-sm-2 col-form-label">Supplier</label>
+                        <div class="col-sm-10">
+                        <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+
+                    @{
+                        if (ViewBag.Supplier != null)
+                        {
+                            foreach (var item in ViewBag.Supplier)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
+                <span asp-validation-for="Id_supplier" class="text-danger"></span>
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Quantity" class="col-sm-2 col-form-label">Quantity</label>
+                        <div class="col-sm-10">
+                            <input type="number" min="0" class="form-control" asp-for="Quantity" placeholder="Quantity" />
+                            <span asp-validation-for="Quantity" class="text-danger"></span>
+                        </div>
+                    </div> 
+                    <div class="row mb-3">
+                        <label asp-for="Price" class="col-sm-2 col-form-label">Price</label>
+                        <div class="col-sm-10">
+                            <input type="number" min="0" class="form-control" asp-for="Price" placeholder="Price" />
+                            <span asp-validation-for="Price" class="text-danger"></span>
+                        </div>
+                    </div> 
+                    <div class="row mb-3">
+                        <label asp-for="Desciption" class="col-sm-2 col-form-label">Desciption</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" asp-for="Desciption" placeholder="Desciption" />
+                            <span asp-validation-for="Desciption" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-3">
+                        <label asp-for="Status" class="col-sm-2 col-form-label">Status</label>
+                          <div class="col-sm-10 offset-sm-2">
+                            <div class="form-check">
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="1" id="defaultRadio1" checked/>
+                                <label class="form-check-label" asp-for="Status"> Use </label>
+                            </div>
+                            <div class="form-check">
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2"  />
+                                <label class="form-check-label" for="defaultRadio2"> Not Use </label>
+                            </div>
+                            <span asp-validation-for="Status" class="text-danger"></span>
+                        </div>
+                    </div>
+                     <div class="row mb-3">
+                <div class="mb-3">
+                    <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
+                    <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
+                </div>
+            </div>
+                    <div class="row justify-content-end">
+                        <div class="col-sm-10">
+                            <button type="submit" class="btn btn-primary">
+                                <span class="mdi mdi-check-outline"></span> Submit
+                            </button>
+                            <div class="btn-group ms-2">
+                                <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
+                                    <span class="mdi mdi-close"></span> Cancel
+                                </a>
+                                <script>
+function goBack() {
+    window.history.back();
+}
+</script>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <script>
     let myList;
 
