--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -145,7 +145,14 @@
                                     @Html.DisplayFor(modelItem => item.Price)
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Status)
+                                    @if (item.Status == 1)
+                                    {
+                                        <span class="badge bg-label-success rounded-pill">Hoạt động</span>
+                                    }
+                                    @if (item.Status == 0)
+                                    {
+                                        <span class="badge rounded-pill bg-label-danger">Không hoạt động</span>
+                                    }
                                 </td>
 
                                 <td>
